--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -56,3 +56,27 @@
   background: #ff8a75; 
   transform: translateY(-1px);
 }
+
+.btn-outline {
+    text-decoration: none;
+    background: transparent;
+    color: var(--color--primary);
+    /* border: 2px solid #0782bc; */
+    box-shadow: 0 6px 18px rgba(7, 130, 188, 0.5);
+    padding: 8px 14px;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all .2s ease;
+}
+
+.btn-outline:hover {
+    background: var(--color-accent);
+    box-shadow: 0 6px 10px rgba(var(--color-accent-rgb), 0.1);
+    color: #fff;
+}
+
+.btn-outline:active {
+    transform: translateY(1px);
+}
